# ml-app

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  rebuild-run.bat
backend/: Dockerfile  docker-entrypoint.sh  requirements.txt
backend/app/: __init__.py  main.py
backend/tests/: benchmark_full_profile.py  conftest.py  test_access_control.py  test_auth.py  test_automl_workflow.py  test_business_cases_pipelines.py  test_config.py  test_dataset_lineage.py  test_datasets_upload.py  test_duckdb_runtime.py  test_feature_engineering.py  test_full_profile.py  test_migrations.py  test_profile_jobs.py  (+14 more)
docs/: README.md  analysis-data-browser-reference.md  architecture.md  automl-autofe-stage-1.md  batch-scoring-stage-1.md  data-engineering-stage-1.md  descriptive-profiling-performance.md  development.md  estates-demo-bootstrap.md  feature-engineering-stage-1.md  model-training-scoring-stage-1.md  model-training-workbench.md  monitoring-pipeline-stage-1.md  online-model-serving-stage-1.md  online-service-monitoring-stage-1.md  refactoring-audit-2026-07.md  refactoring-audit.md  synthetic-ml-scenarios.md
examples/: __init__.py  bootstrap_estates_sell_prices.py  build_api_usage_notebooks.py  estates_bootstrap_manifest.py  example01_lifecycle.py  generate_synthetic_datasets.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
ml_app_client/: README.md  __init__.py  client.py
tests/: test_api_usage_notebooks.py  test_estates_bootstrap.py  test_example01_lifecycle.py  test_ml_app_client.py
(+182 files in other folders)
